--- a/app/components/blackout/blackout.html
+++ b/app/components/blackout/blackout.html
@@ -79,14 +79,14 @@
           <ch5-image
             alt="window-img"
             class="window-image"
-            url="/assets/img/blinds/window_view1.jpeg"
+            url="./assets/img/blinds/window_view1.jpeg"
           >
           </ch5-image>
           <div class="blinds-image-container-right blackout-horizontal-right">
             <ch5-image
               alt="blackout-img-right"
               class="blackout-image-right"
-              url="/assets/img/blinds/curtain_grey_right.png"
+              url="./assets/img/blinds/curtain_grey_right.png"
             >
             </ch5-image>
           </div>
@@ -94,7 +94,7 @@
             <ch5-image
               alt="blackout-img-left"
               class="blackout-image-left"
-              url="/assets/img/blinds/curtain_grey_left.png"
+              url="./assets/img/blinds/curtain_grey_left.png"
             >
             </ch5-image>
           </div>
