--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -1,10 +1,13 @@
-$window_bg_image: url("/assets/img/blinds/window_view1.jpeg");
-$shades_bg_image: url("/assets/img/blinds/blinds_transp_white_resized.png");
-$blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
-
 .ch5-button {
   border: none;
 }
+
+// $window_bg_image: url("/assets/img/blinds/window_view1.jpeg");
+// $shades_bg_image: url("/assets/img/blinds/blinds_transp_white_resized.png");
+// $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
+$window_bg_image: url("./../img/blinds/window_view1.jpeg");
+$shades_bg_image: url("./../img/blinds/blinds_transp_white_resized.png");
+$blackout_bg_image: url("./../img/blinds/curtain_grey_left_resized.png");
 
 // custom header
 .navbar-default.navbar {
@@ -920,9 +923,6 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
       @include media-breakpoint-up(sm) {
         font-size: 1rem;
       }
-      // > * {
-      //   pointer-events: none;
-      // }
     }
   }
 
@@ -940,9 +940,10 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
       }
       .noUi-connect::after {
         transform: rotate(-90deg);
-        background: $shades_bg_image !important;
-        background-repeat: no-repeat !important;
-        background-size: 150% 150% !important;
+        // background: url("./../img/blinds/blinds_transp_white_resized.png");
+        background: $shades_bg_image;
+        background-repeat: no-repeat;
+        background-size: 150% 150%;
         content: "";
         opacity: 0.75;
         top: 0;
@@ -962,11 +963,38 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
   .blackout-container {
     .ch5-slider {
       .noUi-connect {
-        background: $blackout_bg_image !important;
-        background-size: 150% 100% !important;
-        background-repeat: no-repeat !important;
-        background-color: transparent;
+        background: $blackout_bg_image;
+        background-size: 150% 100%;
+        background-repeat: no-repeat;
       }
+
+      &.right-slider {
+        .noUi-connect {
+          // background: $blackout_bg_image;
+          // background-size: 150% 100%;
+          // background-repeat: no-repeat;
+          display: block;
+          position: relative;
+          background-image: none !important;
+          background-color: transparent;
+          background-size: 100% 100%;
+        }
+
+        .noUi-connect::after {
+          transform: rotate(-180deg);
+          background: $blackout_bg_image;
+          background-size: 150% 100%;
+          width: 150%;
+          height: 100%;
+          background-repeat: no-repeat;
+          content: "";
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          right: 0;
+        }
+      }
+
       // ............... this block was not  in use
       // &.left-slider {
       //   .noUi-connect {
@@ -989,9 +1017,9 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
     border-top: 1rem solid rgb(48, 26, 2);
     box-shadow: 0px 5px 6px 5px rgb(85, 83, 83);
     border-radius: 5px;
-    // background: $window_bg_image !important;
-    // background-size: 100% 100% !important;
-    // background-repeat: no-repeat !important;
+    background: $window_bg_image;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     padding: 0 0 0 0;
     height: 18rem;
     width: 25rem;
@@ -1003,6 +1031,8 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
       height: 20rem;
       width: 30rem;
     }
+
+    // Styles for blinds done with css and JS
     .window-image {
       width: 100%;
       height: 100%;
@@ -1033,55 +1063,55 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
     }
 
     // styles for blinds as slider
-    // .ch5-slider {
-    //   display: inline-block !important;
-    //   // transform-origin: center center;
-    //   padding: 0 !important;
-    //   height: 17.2rem;
-    //   width: 12.3rem !important;
+    .ch5-slider {
+      display: inline-block !important;
+      // transform-origin: center center;
+      padding: 0 !important;
+      height: 17.2rem;
+      width: 12.3rem !important;
 
-    //   &.right-slider {
-    //     transform: rotate(180deg);
-    //     // transform-origin: center center;
-    //     .noUi-connects {
-    //       border-radius: 3px;
-    //     }
-    //     .noUi-target {
-    //       margin-top: 0.2rem;
+      &.right-slider {
+        transform: rotate(180deg);
+        // transform-origin: center center;
+        .noUi-connects {
+          border-radius: 3px;
+        }
+        .noUi-target {
+          margin-top: 0.2rem;
 
-    //       @include media-breakpoint-up(sm) {
-    //         margin-top: -0.1rem;
-    //       }
-    //     }
-    //   }
-    //   @include media-breakpoint-up(sm) {
-    //     height: 12.6rem;
-    //     width: 9.8rem !important;
-    //   }
-    //   @include media-breakpoint-up(md) {
-    //     height: 19.2rem;
-    //   }
-    //   .noUi-connects {
-    //     position: static;
-    //   }
-    //   .noUi-target {
-    //     background: transparent !important;
-    //     height: 17rem;
-    //     width: 12rem;
-    //     border: 0;
-    //     @include media-breakpoint-up(sm) {
-    //       height: 12.6rem;
-    //       width: 9.5rem;
-    //     }
-    //     @include media-breakpoint-up(md) {
-    //       height: 20rem;
-    //       width: 30rem;
-    //     }
-    //   }
-    //   .noUi-base {
-    //     border-radius: 5px;
-    //   }
-    // }
+          @include media-breakpoint-up(sm) {
+            margin-top: -0.1rem;
+          }
+        }
+      }
+      @include media-breakpoint-up(sm) {
+        height: 12.6rem;
+        width: 9.8rem !important;
+      }
+      @include media-breakpoint-up(md) {
+        height: 19.2rem;
+      }
+      .noUi-connects {
+        position: static;
+      }
+      .noUi-target {
+        background: transparent !important;
+        height: 17rem;
+        width: 12rem;
+        border: 0;
+        @include media-breakpoint-up(sm) {
+          height: 12.6rem;
+          width: 9.5rem;
+        }
+        @include media-breakpoint-up(md) {
+          height: 20rem;
+          width: 30rem;
+        }
+      }
+      .noUi-base {
+        border-radius: 5px;
+      }
+    }
   }
   ch5-list {
     .list-item {
